# prokrustean

./: .gitignore  CMakeLists.txt  README.md  get_bwt.sh  get_bwt_grl.py  pk_construction.cpp  prokrustean.access.cpp  prokrustean.braycurtis.cpp  prokrustean.cdbg.cpp  prokrustean.cpp  prokrustean.dbg.cpp  prokrustean.hog.cpp  prokrustean.kmer.count.cpp  prokrustean.kmer.cpp  prokrustean.overlap.cpp  prokrustean.stat.cpp  prokrustean.unitig.count.cpp  run_tests.sh
tests/: CMakeLists.txt  const.cpp  naive_impl.cpp  test_application.braycurtis.cpp  test_application.cdbg.count.cpp  test_application.cdbg.cpp  test_application.dbg.count.cpp  test_application.kmer.count.cpp  test_application.kmer.cpp  test_application.overlap.cpp  test_application.unitig.count.cpp  test_bitvector.cpp  test_construction.cpp  test_construction.maxrep.cpp  test_construction.mincover.cpp  test_construction.navigation.cpp  test_construction.parallel.cpp  test_construction.repr.annot.cpp  test_construction.repr.cpp  test_construction.repr.rule.cpp  test_construction.repr_annot.cpp  test_construction.reprrank.cpp  test_construction.support.cpp  test_fm_index.cpp  test_naive_fm_index.cpp  test_performance.bitvector.cpp  test_performance.construction.cpp  test_performance.tree.cpp  test_storage.cpp  test_text_indexing.cpp  tests.cpp  tests_performance.cpp  util.cpp
tests/data/: 1_ebwt.txt  1_sequences.txt  2_ebwt.txt  2_sequences_unsorted.txt  3_ebwt.txt  3_sequences_unsorted_tied.txt  SRR20044276.001001.bidirection.bwt  SRR20044276.001001.bwt  SRR20044276.001001.txt  SRR20044276.part_001.part_001.bwt  (+5 more)
(+145 files in other folders)
