cmake_minimum_required(VERSION 3.22.0)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
project (prokrustean)
add_executable(prokrustean prokrustean.cpp)
add_executable(prokrustean_access prokrustean.access.cpp)
add_executable(prokrustean_stat prokrustean.stat.cpp)
add_executable(prokrustean_cdbg prokrustean.cdbg.cpp)
add_executable(prokrustean_hog prokrustean.hog.cpp)
add_executable(prokrustean_unitig_count prokrustean.unitig.count.cpp)
add_executable(prokrustean_kmer prokrustean.kmer.cpp)
add_executable(prokrustean_kmer_count prokrustean.kmer.count.cpp)
